added resources for icons and splashscreens

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css?{{cachebust}}">
         <link rel="stylesheet" href="mxclientsystem/mxui/ui/mxui.css?{{cachebust}}">
-
+   
         <link rel="stylesheet" href="styles/css/lib/lib.css?{{cachebust}}">
         <link rel="stylesheet" href="styles/css/custom/custom.css?{{cachebust}}">
+
+        <!-- CONFIGURATION Web Apps based on http://taylor.fausak.me/2015/01/27/ios-8-web-apps/ -->
+
+        <!-- ICONS EXAMPLE -->
+
+        <!-- iPhone retina icon (iOS < 7) -->
+        <!-- <link href="resources/ios/icons/apple-touch-icon-precomposed-114x114.png" sizes="114x114" rel="apple-touch-icon-precomposed"> -->
+
+        <!-- STARTUP IMAGES -->
+        <!-- <link href="resources/ios/startup/apple-touch-startup-image-1496x2048.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" rel="apple-touch-startup-image"> -->
+
     </head>
     <body dir="ltr">
         <div id="content"></div>
