--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Mendix</title>
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css?{{cachebust}}">
         <link rel="stylesheet" href="mxclientsystem/mxui/ui/mxui.css?{{cachebust}}">
    
